# GeekClock

./: .gitignore  DEVELOPER_GUIDE.md  STARTUP_NOTES.md  build.bat  build.py  cleanup.bat  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: DEVELOPER_GUIDE.md  EXE_GUIDE.md  GeekClock_最终方案设计.md  PROJECT_STRUCTURE.md  USER_GUIDE.md
geekclock/: __main__.py  app.py
geekclock/common/: __init__.py  opacity_slider.py
geekclock/core/: audio_player.py  config.py  scheduler.py
geekclock/dialogs/: edit_alarm.py  keep_alive_settings.py  notification.py  settings.py
geekclock/floating_clock/: floating_clock.py
geekclock/main_window/: alarm_card.py  collapsible_group.py  window.py
geekclock/system/: autostart.py  logging_setup.py  resources.py  single_instance.py
geekclock/timer/: settings_dialog.py  widget.py
geekclock/tray/: tray.py
tests/: conftest.py
tests/core/: test_config.py  test_config_migration.py
tests/system/: test_resources.py
